finishing out the new chat page with fixed pos and perfect scrollbar ftw

--- a/assets/scss/common/_variables.scss
+++ b/assets/scss/common/_variables.scss
@@ -5,3 +5,4 @@
 $body_fs: 16;
 $footer-height: 80px;
 $playlist-header-height: 105px;
+$new-message-container-height: 45px;
