--- a/assets/scss/modules/_chat.scss
+++ b/assets/scss/modules/_chat.scss
@@ -1,28 +1,25 @@
 //Chat
 .messages{
-	position: fixed;
-	left: 0;
-	right: 0;
-	width: 100%;
-	font-family: $sans-light;
-	margin: $playlist-header-height 0 3em;
+
 }
 
 .message-list{
-	padding: 1em 1em 2em;
-	height: 25em;
-	overflow: auto;
-	background: $light-grey;
-
-	.playlist-finished-static &{
-		background: white;
-	}
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: $new-message-container-height + $footer-height + 40px;
+	width: 100%;
+	padding: 2em 0;
+	margin: $playlist-header-height 0 0;
+	overflow: hidden;
+	font-family: $sans-light;
 }
 
 .chat-message{
 	position: relative;
 	width: 100%;
-	margin-bottom: 1.75em;
+	margin-bottom: 2.5em;
 	text-align: right;
 	font-weight: 300;
 
@@ -44,25 +41,35 @@
 	}
 }
 
+$avatar-width: 50px;
+
 .chat-avatar-and-time{
 	position: absolute;
-	bottom: -35px;
-	right: 10px;
-	width: 40px;
+	bottom: -40px;
+	right: 0;
+	width: $avatar-width;
 
 	.remote &{
-		left: 10px;
+		left: 0;
 		right: auto;
 
 		.remote-user-disconnected & .chat-message-avatar{
 			opacity: 0.5;
 		}
 	}
+
+	@include smaller-than(extra-large){
+		right: 10px;
+
+		.remote &{
+			left: 10px;
+		}
+	}
 }
 
 .chat-message-avatar{
-	width: 50px;
-	height: 50px;
+	width: $avatar-width;
+	height: $avatar-width;
 	margin-bottom: -3px;
 	border-radius: 100%;
 }
@@ -80,12 +87,12 @@
 	display: inline-block;
 	max-width: 50%;
 	padding: 0.5em 0.75em 0.6em;
-	margin-right: 70px;
-	font-size: 1.2em;
+	margin-right: $avatar-width + 30px;
+	font-size: 1em;
 	color: $off-black;
 	font-weight: 300;
 	text-align: left;
-	line-height: 1.2;
+	line-height: 1.1;
 	background: white;
 	border: 1px solid $border-grey;
 
@@ -115,7 +122,7 @@
 	}
 
 	.remote &{
-		margin-left: 70px;
+		margin-left: $avatar-width + 30px;
 
 		&:before, &:after{
 			left: -10px;
@@ -142,7 +149,7 @@
 	right: 0;
 	bottom: $footer-height + 40px;
 	width: 100%;
-	height: 45px;
+	height: $new-message-container-height;
 	padding-left: 1em;
 	margin-top: 0.75em;
 }
@@ -159,7 +166,7 @@
 	width: 100%;
 	height: 100%;
 	padding: 0 0.5em 0.1em 0.8em;
-	font-size: 1.2em;
+	font-size: 1em;
 	font-family: $sans-light;
 	font-weight: 300;
 	border: 1px solid $border-grey;
@@ -176,7 +183,7 @@
 	width: 80px;
 	height: 100%;
 	right: 0;
-	font-size: 1.2em;
+	font-size: 1em;
 	line-height: 1;
 	cursor: pointer;
 	outline: 0;
